# quimland

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: settings.py  urls.py
ql/: mcp.py  queries.py  reports.py  storage.py  tests.py  utils.py  views.py
ql/admin/: __init__.py  asset.py  asset_manager.py  cash_entry.py  dashboard.py  due_note.py  filters.py  fund.py  fund_due.py  loan.py  payment.py  payment_batch.py  payout.py  project.py  property_tax.py  receipt.py  receipt_scan.py  receipt_scan.pyx  report.py  salary_rate.py  setting.py  tariff.py  transaction.py  transaction_item.py  user.py  wallet.py  wallet_transfer.py
ql/migrations/: 0001_initial.py  0002_rename_ql_cashentr_fund_id_a847d9_idx_cash_entrie_fund_id_53125c_idx_and_more.py  0003_userproperty.py  0004_add_payment_batch_created_at.py  0005_add_timestamps_to_all_models.py  0006_alter_cashentry_options_alter_paymentbatch_options.py  0007_userproperty_home_number.py  0008_add_phone_to_user_property.py  0009_alter_userproperty_phone.py  0010_add_receipt_to_payment_batch.py  0011_receipt_imagefield.py  0012_paymentbatch_nominal.py  0013_paymentbatch_receipt_storage.py  0014_alter_paymentbatch_receipt.py  0015_propertytax.py  0016_alter_propertytax_user_onetoonefield.py  0017_receipt_fund_parent_tariff_fund_loan_project_and_more.py  0018_remove_receipt_url_receipt_image_and_more.py  0019_alter_propertytax_options_alter_tariff_options_and_more.py  0020_alter_transaction_receipt.py  0021_remove_payment_payments_kind_f680c2_idx_and_more.py  0022_duenote.py  (+24 more)
(+72 files in other folders)
