[project]
name = "quimland"
version = "0.1.0"
description = ""
authors = [
    {name = "Fathur Rohman",email = "hi.fathur.rohman@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "django-mcp-server (>=0.5.7,<0.6.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sorl-thumbnail (>=13.0.0,<14.0.0)",
    "pillow (>=12.3.0,<13.0.0)",
    "django-storages[s3] (>=1.14.6,<2.0.0)",
    "anthropic (>=0.116.0,<0.117.0)",
    "django-admin-autocomplete-filter (>=0.7.1,<0.8.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
